test/Fail/Issue1428a.err
Issue1428a.agda:31.5-10: error: [NotInScope]
Not in scope:
  FIXME at Issue1428a.agda:31.5-10
when scope checking FIXME
